--- a/templates/administration/jovac/edit_course.html
+++ b/templates/administration/jovac/edit_course.html
@@ -5,7 +5,7 @@
 JOVAC | Edit Course
 {% endblock %}
 
-{% block jovac_active %} 
+{% block jovac_active %}
 active
 {% endblock %}
 
@@ -34,7 +34,7 @@ active
 
                                 <div class="mb-3">
                                     <label for="description" class="form-label">Description <div class="star">*</div>
-                                        </label>
+                                    </label>
                                     <textarea class="form-control" id="description" name="description" rows="5"
                                         required>{{ course.description }}</textarea>
                                 </div>
@@ -44,12 +44,18 @@ active
                                     <select class="form-select form-control" name="instructors" id="instructors"
                                         multiple>
                                         {% for instructor in instructors %}
-                                        <option value="{{ instructor.id }}" 
-                                        {% if instructor in course.instructors.all %}selected{% endif %}>
+                                        <option value="{{ instructor.id }}" {% if instructor in course.instructors.all
+                                            %}selected{% endif %}>
                                             {{ instructor.first_name }} {{ instructor.last_name }}
                                         </option>
                                         {% endfor %}
                                     </select>
+                                </div>
+
+                                <div class="mb-3">
+                                    <label for="thumbnail" class="form-label">Thumbnail Image</label>
+                                    <input type="file" class="form-control" id="thumbnail" name="thumbnail"
+                                        accept="image/*">
                                 </div>
 
                                 <div class="col-md-12">
