--- a/templates/administration/jovac/index.html
+++ b/templates/administration/jovac/index.html
@@ -57,6 +57,11 @@ Administration | JOVAC
 
             <div class="card">
 
+                <!-- Thumbnail with lazy loading -->
+                <a href="{% url 'administrator_jovac' course.slug %}">
+                    <img src="{{ course.thumbnail.url }}" class="card-img-top lazy-load" alt="${sheet.name}">
+                </a>
+
                 <div class="card-body">
                     <h5 class="card-title">{{ course.name }}🔥</h5>
 
