--- a/templates/administration/jovac/edit_course.html
+++ b/templates/administration/jovac/edit_course.html
@@ -17,7 +17,7 @@ active
         </div>
 
         <div class="container px-4">
-            <form action="#" method="POST">
+            <form action="#" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 <hr class="mt-0">
                 <div class="row">
