--- a/templates/administration/jovac/reorder.html
+++ b/templates/administration/jovac/reorder.html
@@ -36,7 +36,7 @@ Reorder Assignments - {{ course_sheet.name }}
                         {% if assignment.is_tutorial %}
                             <span class="badge bg-info ms-2">Tutorial</span>
                         {% else %}
-                            <span class="badge bg-secondary ms-2">Assignment</span>
+                            <span class="badge bg-success ms-2">Assignment</span>
                         {% endif %}
                     </span>
                     <span class="drag-handle" style="cursor: grab;">&#9776;</span>
