updated on instructor side as well

--- a/templates/instructor/jovac/course.html
+++ b/templates/instructor/jovac/course.html
@@ -1,7 +1,7 @@
 {% extends "instructor/base.html" %}
 {% load static %}
 
-{% block title %}   
+{% block title %}
 JOVAC | {{ course.name }}
 {% endblock %}
 
@@ -22,12 +22,13 @@ active
             </h3>
         </div>
         <div class="row mt-n3">
-            <div class="col-md-5 mx-auto">
-                <a href="{% url 'instructor_jovac_add_assignment' course.slug %}"
-                    class="btn btn-outline-primary button mt-n2 mb-3 w-100 ">Add Assignment</a>
 
+            <div class="col-md-3 mx-auto">
+                <a href="{% url 'instructor_add_jovac_sheet' course.slug %}"
+                    class="btn btn-outline-success button mt-n2 mb-3 w-100 ">Add Sheet</a>
             </div>
-            <div class="col-md-5 mx-auto">
+
+            <div class="col-md-3 mx-auto">
                 <a href="{% url 'instructor_jovac_enrollment_requests' course.slug %}"
                     class="btn btn-outline-secondary button mt-n2 mb-3 w-100 ">Enrollment Requests</a>
             </div>
@@ -42,164 +43,47 @@ active
     </div>
     {% endfor %}
 
-
-    <!-- ========================== SEARCH BAR ==================================== -->
-
-    <div class="card w-100">
-        <div class="card-body p-4">
-            <!-- <h5 class="card-title fw-semibold mb-4">Search Applicants 🔍</h5> -->
-            <form method="post">
-
-                {% csrf_token %}
-
-                <div class="input-group">
-
-                    {% if query %}
-
-                    <input type="text" class="form-control" placeholder="Search by ID, Title, Description or Type"
-                        aria-label="Search by ID, Title, Description or Type" aria-describedby="button-addon2"
-                        name="query" value="{{ query }}">
-
-                    {% else %}
-
-                    <input type="text" class="form-control" placeholder="Search by ID, Title, Description or Type"
-                        aria-label="Search by ID, Title, Description or Type" aria-describedby="button-addon2"
-                        name="query">
-
-                    {% endif %}
-
-                    <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Search</button>
-                    <!-- make a button to clear the search -->
-                    <a href="#" class="btn btn-outline-danger">Clear</a>
-                </div>
-            </form>
-        </div>
-    </div>
-
     <!-- ================================= SESSIONS TABLE ================================== -->
 
-    <div class="card w-100">
-        <div class="card-body p-4">
-            <h5 class="card-title fw-semibold mb-4">Angaari Assignments 🔥
-                {% if query %}
-                <span class="fs-6"> | Search Results for "{{ query }}"</span>
-                {% endif %}
-            </h5>
-            <div class="table-responsive">
-                <table class="table text-nowrap mb-0 align-middle">
-                    <thead class="text-dark fs-4">
+ <div class="row row-cols-1 row-cols-md-3 g-4 mt-4" id="sheets-container">
 
-                        <tr>
-                            <th class="border-bottom-0">
-                                <h6 class="fw-semibold mb-0">
-                                    #
-                                </h6>
-                            </th>
-                            <th class="border-bottom-0">
-                                <h6 class="fw-semibold mb-0">
-                                    Title🗒️
-                                </h6>
-                            </th>
-                            <th class="border-bottom-0">
-                                <h6 class="fw-semibold mb-0">
-                                    Description📝
-                                </h6>
-                            </th>
+        {% for sheet in course_sheets %}
+        <div class="col-md-3">
 
-                            <th class="border-bottom-0">
-                                <h6 class="fw-semibold mb-0">
-                                    Type❔
-                                </h6>
-                            </th>
+            <div class="card">
 
-                            <th class="border-bottom-0">
-                                <h6 class="fw-semibold mb-0">
-                                    Deadline⏰
-                                </h6>
-                            </th>
+                <!-- Thumbnail with lazy loading -->
+                <a href="{% url 'instructor_jovac_sheet' course.slug sheet.slug %}">
+                    <img 
+                        src="{{ sheet.thumbnail.url }}" 
+                        class="card-img-top lazy-load" 
+                        alt="${sheet.name}">
+                </a>
 
-                            <th class="border-bottom-0 justify-content-center">
-                                <h6 class="fw-semibold mb-0">
-                                    Action#1
-                                </h6>
-                            </th>
-                            <th class="border-bottom-0 justify-content-center">
-                                <h6 class="fw-semibold mb-0">
-                                    Action#2
-                                </h6>
-                            </th>
+                <div class="card-body">
+                    <h5 class="card-title">{{ sheet.name }}🔥</h5>
 
-                        </tr>
-                    </thead>
+                    <!-- <p class="ca   rd-text mb-1">Total Assignments: {{ course.get_total_assignments }}</p> -->
 
-                    <tbody id="assignmentTableBody">
+                    {% if sheet.is_enabled %}
+                    <span class="badge bg-success">
+                        Enabled
+                    </span>
 
-                        {% for assignment in assignments %}
+                    {% else %}
+                    <span class="badge bg-danger">
+                        Disabled
+                    </span>
+                    {% endif %}
 
-                        <tr>
-                            <td class="border-bottom-0">
-                                <h6 class="fw-semibold mb-0">{{ assignment.id }}</h6>
-                            </td>
-                            <td class="border-bottom-0">
-                                <h6 class="fw-semibold mb-1" data-bs-toggle="tooltip" data-bs-placement="top"
-                                    title="{{ assignment.title }}">{{ assignment.title|truncatechars:10 }}</h6>
-
-                            </td>
-
-                            <td class="border-bottom-0">
-                                <p class="mb-0 fw-normal" data-bs-toggle="tooltip" data-bs-placement="top"
-                                    title="{{ assignment.description }}">
-                                    {{ assignment.description|truncatechars:30 }}
-                                </p>
-                            </td>
-
-                            <td class="border-bottom-0">
-                                <div class="d-flex align-items-center gap-2">
-                                    <p class="mb-0 fw-normal">{{ assignment.assignment_type }} Type</p>
-                                </div>
-                            </td>
-
-                            <td class="border-bottom-0">
-                                <p class="fw-semibold mb-0">
-                                    <span> {{ assignment.due_date|date }} </span>
-                                    <br>
-                                    <span style="font-weight: bold; color: black;">
-                                        @{{ assignment.due_date|time }} </span>
-                                    </span>
-                                </p>
-                            </td>
-
-                            <td class="border-bottom-0">
-                                <div class="d-flex align-items-center gap-2">
-                                    <a href="{% url 'instructor_view_assignment_submissions' assignment.id %}"
-                                        class="btn btn-info float-end">View Submission✅
-                                    </a>
-
-                                </div>
-                            </td>
-
-
-                            </td>
-
-                            <td class="border-bottom-0">
-                                <div class="d-flex align-items-center gap-2">
-                                    <a class="btn btn-outline-dark edit-btn"
-                                        href="{% url 'administrator_edit_assignment' assignment.id %}">Edit</a>
-                                    <a class="btn btn-outline-danger delete-btn"
-                                        href="{% url 'administrator_delete_assignment' assignment.id %}">Delete</a>
-                                </div>
-                            </td>
-
-
-                        </tr>
-
-                        {% endfor %}
-
-                    </tbody>
-                </table>
+                    <a href="{% url 'instructor_jovac_sheet' course.slug sheet.slug %}"
+                        class="btn btn-outline-secondary w-100 mt-2">View
+                        More</a>
+                </div>
             </div>
 
         </div>
+        {% endfor %}
     </div>
 
 
