updated on instructor side as well

--- a/templates/student/batch/my_batches.html
+++ b/templates/student/batch/my_batches.html
@@ -27,7 +27,7 @@ Dashboard | My Courses
     <!-- ============================================ JOVAC ============================================-->
     <!-- ===============================================================================================-->
 
-    <!-- <div class="card">
+    <div class="card">
         <div class="card-body">
             <h3 class="heading">
                 <span class="fw-semibold">J O V A C 🔥</span>
@@ -35,7 +35,7 @@ Dashboard | My Courses
                 </span>
             </h3>
         </div>
-    </div> -->
+    </div>
 
     <!-- =========================================== APPROVED JOVAC COURSES =========================== -->
 
