--- a/templates/administration/jovac/course_sheet.html
+++ b/templates/administration/jovac/course_sheet.html
@@ -140,7 +140,11 @@ active
                                     Title🗒️
                                 </h6>
                             </th>
-
+                            <th class="border-bottom-0">
+                                <h6 class="fw-semibold mb-0">
+                                    Description📝
+                                </h6>
+                            </th>
 
                             <th class="border-bottom-0">
                                 <h6 class="fw-semibold mb-0">
@@ -178,7 +182,7 @@ active
                             </td>
                             <td class="border-bottom-0">
                                 <h6 class="fw-semibold mb-1" data-bs-toggle="tooltip" data-bs-placement="top"
-                                    title="{{ assignment.title }}">{{ assignment.title|truncatechars:30 }}</h6>
+                                    title="{{ assignment.title }}">{{ assignment.title|truncatechars:10 }}</h6>
 
                             </td>
 
