--- a/templates/administration/jovac/add_assignment.html
+++ b/templates/administration/jovac/add_assignment.html
@@ -105,6 +105,14 @@ active
                             placeholder="Provide any specific instructions (optional)"></textarea>
                     </div>
 
+                    <!-- uploading downloadable content -->
+                    <div class="mb-3">
+                        <label for="downloadable_content" class="form-label">Downloadable Content</label>
+                        <input type="file" class="form-control" id="downloadable_content" name="downloadable_content"
+                            accept=".zip,.pdf,.docx,.txt">
+                        <small class="form-text text-muted">Upload any files related to the assignment (optional).</small>
+                    </div>
+
                     <div class="form-check mb-2">
                         <input class="form-check-input" type="checkbox" id="allow_late_submission"
                             name="allow_late_submission">
