--- a/templates/administration/jovac/add_assignment.html
+++ b/templates/administration/jovac/add_assignment.html
@@ -16,7 +16,7 @@ active
             <h5 class="card-title fw-semibold mb-0">Add Assignment for {{ course.name }}</h5>
         </div>
         <div class="card-body">
-            <form method="POST">
+            <form method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
 
                 <!-- Is Tutorial Checkbox -->
