--- a/templates/instructor/jovac/enrollment_requests.html
+++ b/templates/instructor/jovac/enrollment_requests.html
@@ -19,7 +19,7 @@ active
                     <span class="fw-semibold">
                         &nbsp;Pending Requests: ({{ total_pending_requests }})
                     </span>
-                    <!-- <a id="approve-all-button" class="btn btn-success btn-lg">Approve All</a> -->
+                    <a href="{% url 'approve_all_jovac_enrollment_requests' course.id %}" class="btn btn-success btn-lg float-end">Approve All</a>
 
                 </h3>
             </h3>
