--- a/templates/administration/flames/course_detail.html
+++ b/templates/administration/flames/course_detail.html
@@ -316,7 +316,7 @@
             <i class="fas fa-eye me-2"></i>View Public Page
         </a>
 
-        <a href="{% url 'admin_flames_course_sessions' course.slug %}" class="btn btn-primary">
+        <a href="{% url 'admin_course_sessions' course.slug %}" class="btn btn-primary">
             <i class="fas fa-check-circle me-2"></i>Sessions
         </a>
     </div>
