updated some recoding sessions

--- a/templates/student/flames/my_course.html
+++ b/templates/student/flames/my_course.html
@@ -164,8 +164,18 @@ active
                                     <a href="#"
                                         class="btn btn-outline-{{ session.get_status_color }} float-end">Wait😎</a>
                                     {% elif session.is_past %}
+                                    {% if session.recording_url %}
+                                    
                                     <a href="{{ session.recording_url }}" target="_blank"
-                                        class="btn btn-outline-{{ session.get_status_color }} text-blue float-end">Recording👀</a>
+                                        class="btn btn-outline-{{ session.get_status_color }} text-blue float-end">Watch
+                                        Recording👀</a>
+                                    
+                                    {% else %}
+                                    
+                                    <button disabled class="btn btn-outline-{{ session.get_status_color }} text-blue float-end">Recording Not
+                                        Available</button>
+                                    
+                                    {% endif %}
 
                                     {% else %}
                                     <button class="btn btn-outline-indigo float-end">Session Ended🔥</button>
